# celesos

./: .gitignore  .gitmodules  BP_Instructions.md  CMakeLists.txt  README.md  celes.doxygen.in  celes.version.in  celesos.version.in  celesos_build.sh  celesos_install.sh  celesos_uninstall.sh  eosio_build.sh  eosio_install.sh  eosio_uninstall.sh  mainnet-genesis.json  tar.sh  testnet.template  zip.sh
.buildkite/: debug.yml  long_running_tests.yml  pipeline.yml
CMakeModules/: EosioTester.cmake.in  celesos-config.cmake.in  doxygen.cmake  package.cmake
Docker/: Dockerfile  README.md  config.ini  docker-compose.yml
Docker-Celesos/: Dockerfile  Dockerfile-Proxy  clceles.sh  docker-compose-latest.yml  nodcelesd.sh
Docker-Celesos/builder/: Dockerfile
Docker-Celesos/dev/: Dockerfile
Docker/builder/: Dockerfile
Docker/dev/: Dockerfile
contracts/: CMakeLists.txt
contracts/bancor/: bancor.hpp  converter.hpp
contracts/celes.bios/: CMakeLists.txt  celes.bios.cpp  celes.bios.hpp
contracts/celes.msig/: CMakeLists.txt  README.md  celes.msig.cpp  celes.msig.hpp
contracts/celes.sudo/: CMakeLists.txt  README.md  (+2 more)
debian/: postinst
libraries/: CMakeLists.txt
libraries/pow/: CMakeLists.txt  ethash.cpp
libraries/pow/include/celesos/pow/: ethash.h  ethash.hpp
libraries/pow/test/: CMakeLists.txt  test.cpp
plugins/: CMakeLists.txt  COMMUNITY.md
plugins/hashrate_metric_plugin/: CMakeLists.txt  hashrate_metric_plugin.cpp
plugins/hashrate_metric_plugin/include/celesos/hashrate_metric_plugin/: hashrate_metric_plugin.hpp
plugins/miner_plugin/: CMakeLists.txt  miner.cpp  miner_plugin.cpp  worker.cpp
plugins/miner_plugin/include/celesos/miner_plugin/: miner.hpp  miner_plugin.hpp  types.hpp  worker.hpp
plugins/miner_plugin/include/eosio/miner_plugin/: miner.hpp  miner_plugin.hpp  worker.h
plugins/miner_plugin/test/: CMakeLists.txt  test.cpp
programs/: CMakeLists.txt
programs/celes-blocklog/: CMakeLists.txt  main.cpp
scripts/: CMakeLists.txt  abigen.sh  celesos-tn_bounce.sh  celesos-tn_down.sh  celesos-tn_roll.sh  celesos-tn_up.sh  celesos_build_amazon.sh  celesos_build_centos.sh  celesos_build_darwin.sh  celesos_build_fedora.sh  celesos_build_ubuntu.sh  clean_old_install.sh  eosio_build_ubuntu.sh  generate_bottle.sh  generate_rpm.sh  generate_tarball.sh
tests/: CMakeLists.txt  Cluster.py  Node.py  chain_plugin_tests.cpp  get_table_tests.cpp  nodeos_run_test.py  p2p_network_test.py  testUtils.py  trans_sync_across_mixed_cluster_test.sh
tools/: eosiocpp.in
unittests/: CMakeLists.txt  abi_tests.cpp  api_tests.cpp  auth_tests.cpp  bootseq_tests.cpp  currency_tests.cpp  delay_tests.cpp  dice_tests.cpp  eosio.sudo_tests.cpp  eosio.system_tests.cpp  eosio.token_tests.cpp  eosio_system_tester.hpp  forked_tests.cpp  main.cpp  multisig_tests.cpp  ram_tests.cpp  tic_tac_toe_tests.cpp  wasm_tests.cpp  whitelist_blacklist_tests.cpp
(+128 files in other folders)
